# rhythmc-rs

./: Cargo.toml  README.md
.github/workflows/: check.yml  deploy.yml
compiler/: Cargo.toml  LICENSE
compiler/scripts/: swizzle.sh
compiler/src/: ast.rs
compiler/src/stdlib/: math.rs  mod.rs  swizzle.rs
compiler/src/sync/: spinlock.rs  worker.rs
compiler/src/utils/: syn.rs
examples/: sample.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: rhythmc_shader_test.rs  shader_test.rs
rhythmc/: Cargo.toml
rhythmc/src/compiler/: mod.rs
rhythmc_compiler/: Cargo.toml
rhythmc_compiler/src/: lib.rs  syntax.rs
rhythmc_compiler/src/stdlib/: math.rs  mod.rs  primative.rs  shader.rs  swizzle.rs  type.rs  types.rs
rhythmc_compiler/src/sync/: buffer.rs  mod.rs  runtime.rs  threadpool.rs
rhythmc_compiler/src/syntax/: mod.rs
rhythmc_compiler/src/utils/: syn.rs
rhythmc_macros/: Cargo.toml
rhythmc_macros/src/: lib.rs
rhythmc_macros/tests/: shader_test.rs
src/: lib.rs  outputs.rs  primatives.rs
src/extensions/: mod.rs
tests/: shader_test.rs
