[package]
name = "rhythmc"
version = "0.0.2"
authors = ["Patrick Hadlaw <patrickhadlaw@gmail.com>"]
description = "A Rust to GLSL/SPIR-V compiler framework. The goal of this crate is to allow creation of GLSL shaders written in pure rust within a crate."
repository = "https://github.com/patrickhadlaw/rhythmc-rs"
edition = "2018"

[dependencies]
macros = { path = "macros" }
compiler = { path = "compiler" }
vulkano = "0.19"
syn = { version = "1.0", features = ["parsing"] }
