[package]
name = "rhythmc"
version = "0.1.0"
description = "A Rust to GLSL/SPIR-V compiler framework. The goal of this crate is to allow creation of GLSL shaders written in pure rust within a crate."
authors = ["Patrick Hadlaw <patrickhadlaw@gmail.com>"]
repository = "https://github.com/patrickhadlaw/rhythmc-rs"
license-file = "LICENSE"
edition = "2018"

[dependencies]
rhythmc_macros = { path = "macros", version = "0.1.0" }
rhythmc_compiler = { path = "compiler", version = "0.1.0" }
vulkano = "0.19"
syn = { version = "1.0", features = ["parsing"] }
